"Remove example nodes and credentials"
This commit removes unused example files and dependencies, including ExampleNode, HttpBinNode, and their associated credentials. The changes simplify the repository by removing legacy content, making it ready for new custom node development.

--- a/package.json
+++ b/package.json
@@ -1,19 +1,19 @@
 {
-  "name": "n8n-nodes-<...>",
-  "version": "0.1.0",
-  "description": "",
+  "name": "n8n-nodes-tail",
+  "version": "1.0.0",
+  "description": "Tail trigger",
   "keywords": [
-    "n8n-community-node-package"
+    "Tail", "Trigger", "n8n-community-node-package"
   ],
   "license": "MIT",
-  "homepage": "",
+  "homepage": "www.zubial.net",
   "author": {
-    "name": "",
-    "email": ""
+    "name": "Zubial.net",
+    "email": "bertrand@zubial.net"
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/<...>/n8n-nodes-<...>.git"
+    "url": "https://github.com/zubial/n8n-nodes-tail.git"
   },
   "engines": {
     "node": ">=18.10",
@@ -25,23 +25,18 @@
     "preinstall": "npx only-allow pnpm",
     "build": "tsc && gulp build:icons",
     "dev": "tsc --watch",
-    "format": "prettier nodes credentials --write",
-    "lint": "eslint nodes credentials package.json",
-    "lintfix": "eslint nodes credentials package.json --fix",
-    "prepublishOnly": "pnpm build && pnpm lint -c .eslintrc.prepublish.js nodes credentials package.json"
+    "format": "prettier nodes --write",
+    "lint": "eslint nodes package.json",
+    "lintfix": "eslint nodes package.json --fix",
+    "prepublishOnly": "pnpm build && pnpm lint -c .eslintrc.prepublish.js nodes package.json"
   },
   "files": [
     "dist"
   ],
   "n8n": {
     "n8nNodesApiVersion": 1,
-    "credentials": [
-      "dist/credentials/ExampleCredentialsApi.credentials.js",
-      "dist/credentials/HttpBinApi.credentials.js"
-    ],
     "nodes": [
-      "dist/nodes/ExampleNode/ExampleNode.node.js",
-      "dist/nodes/HttpBin/HttpBin.node.js"
+      "dist/nodes/Tail/Tail.node.js"
     ]
   },
   "devDependencies": {
