Refactor Tail Trigger node and update metadata
Streamline Tail Trigger configuration by consolidating "Last Lines" into an options collection and enhancing error handling. Updated project metadata in `package.json` and renamed configuration files for better consistency.

--- a/package.json
+++ b/package.json
@@ -3,13 +3,13 @@
   "version": "1.0.0",
   "description": "Tail trigger",
   "keywords": [
-    "Tail", "Trigger", "n8n-community-node-package"
+    "Tail", "Trigger", "", "n8n-community-node-package"
   ],
   "license": "MIT",
   "homepage": "www.zubial.net",
   "author": {
     "name": "Zubial.net",
-    "email": "bertrand@zubial.net"
+    "email": "support@zubial.net"
   },
   "repository": {
     "type": "git",
