Update build script and Tail node command for improvements
Enhance the build process by adding `rimraf` to clean the `dist` folder before compilation. Replace `tail -f` with `tail -F` in the Tail node to improve file monitoring robustness. Also, update dependencies and devDependencies to improve compatibility and maintain the codebase.

--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
   "main": "index.js",
   "scripts": {
     "preinstall": "npx only-allow pnpm",
-    "build": "tsc && gulp build:icons",
+    "build": "rimraf ./dist/** && tsc && gulp build:icons",
     "dev": "tsc --watch",
     "format": "prettier nodes --write",
     "lint": "eslint nodes package.json",
@@ -41,14 +41,17 @@
   },
   "devDependencies": {
     "@typescript-eslint/parser": "^7.15.0",
+    "@types/node": "*",
     "eslint": "^8.56.0",
     "eslint-plugin-n8n-nodes-base": "^1.16.1",
     "gulp": "^4.0.2",
     "n8n-workflow": "*",
     "prettier": "^3.3.2",
-    "typescript": "^5.5.3"
+    "typescript": "^5.5.3",
+    "rimraf": "^6.0.1"
   },
   "peerDependencies": {
+    "@types/node": "*",
     "n8n-workflow": "*"
   }
 }
