Update keywords, fix code indentation, and improve README.
Added new keywords ("SecOps", "Zubial") to package.json to enhance discoverability. Corrected misaligned code indentation in Tail.node.ts to improve readability. Simplified installation instructions in README for clarity.

--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.dev",
   "description": "Tail trigger",
   "keywords": [
-    "Tail", "Trigger", "Local host", "CLI", "n8n-community-node-package"
+    "Tail", "Trigger", "Local host", "CLI", "SecOps", "Zubial", "n8n-community-node-package"
   ],
   "license": "MIT",
   "homepage": "www.zubial.net",
